# tech-store

./: .bandit  .coveragerc  .dockerignore  .editorconfig  .flake8  .gitignore  .isort.cfg  .mypy.ini  Dockerfile  LICENSE  Makefile  README.md  config_mypy_django_plugin.py  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  run
.github/workflows/: codeql-analysis.yml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_employee_extend_user.py
accounts/scripts/: pg_remote_employee_extend_user.sql
core/: settings.py  urls.py  wsgi.py
core/settings/: __init__.py  base.py  dev.py  mixins.py  prod.py
requirements/: apt_install.txt  base.txt  locals.txt  make.txt  readme.md
static/css/: style.css
task_manager/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/migrations/: 0001_initial.py  0002_auto_20210826_1918.py  0002_rename_indexes.py  0003_remove_employee_extend_user.py
task_manager/scripts/: models.sql  models_pg.sql  pg_remote_employee_extend_user.sql  pg_rename_indexes.sql
templates/: base.html
templates/accounts/: signup.html
templates/task_manager/: entry.html  main.html
