[tool.poetry]
name = "tech-store"
version = "0.1.0"
description = "Tech store"
authors = ["fj-fj-fj <x1x1xx0@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
django-configurations = "^2.3.2"
loguru = "^0.6.0"
psycopg2-binary = "^2.9.3"
dj-database-url = "^0.5.0"
django-admin-honeypot = "^1.1.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
flake8 = "^4.0.1"
flake8-functions = "^0.0.7"
flake8-functions-names = "^0.3.0"
flake8-variables-names = "^0.0.5"
django-stubs = "^1.10.0"
ipython = "^8.2.0"
isort = "^5.10.1"
mypy = "^0.942"
pytest = "^7.1.1"
ptpython = "^3.0.20"
snoop = "^0.4.1"
birdseye = "^0.9.3"
django-debug-toolbar = "^3.2.4"
django-extensions = "^3.1.5"
colorama = "^0.4.4"
safety = "^1.10.3"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
